data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_410.wast
;; Sure, here's the list of test descriptions:  1. **Test Description 1:**    - A loop structure with a `br` instruction referencing an invalid label that is deeply nested, ensuring the `br` cannot properly unwind the stack and incorrectly continues looping.    - **Constraint: Label Definition**    - **Relation to Infinite Loop:** Incorrect label handling results in failure to exit the loop.

(assert_invalid
  (module (func $deeply_nested_invalid_label
    (loop (block (loop 
      (block (br 5 (i32.const 1))) (i32.const 2))
    )))
  ))
  "unknown label"
)